<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="src.Activities.Activity_SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/colorTopBackground"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_weight="1.2"
        android:orientation="vertical"
        android:padding="20dp">


        <EditText
            android:id="@+id/signIn_EDT_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#F2F4F4"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#040709"
            android:textColorHint="#8A9298"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/signIn_EDT_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#F2F4F4"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:padding="10dp"
            android:textColor="#040709"
            android:textColorHint="#8A9298"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signIn_LBL_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text=""
            android:textColor="#EA1D0E"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signIn_BTN_signIn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                app:cornerRadius="20dp"
                app:strokeColor="@color/colorPrimaryDark"
                app:strokeWidth="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_customer"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/signIn_LBL_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/open_account"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>